# agent-wallet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SKILLS.md  TASK.md
agent/: Cargo.toml
agent/examples/: simple_agent.rs
agent/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  encryption.rs  error.rs  keypair.rs  lib.rs  rpc.rs  storage.rs  token.rs  transaction.rs  types.rs  wallet.rs
dapp/: Cargo.toml
dapp/examples/: counter_client.rs
dapp/src/: lib.rs
docs/: architecture.md
scripts/: deploy-test-program.sh  start-devnet.sh
