[workspace]
members = [
    "core",
    "agent",
    "dapp",
    "cli",
]
resolver = "2"

[workspace.dependencies]
solana-sdk = { version = "=1.17.0", features = ["program", "full"] }
solana-client = { version = "=1.17.0" }
solana-program = { version = "=1.17.0" }
solana-program-test = { version = "=1.17.0" }
solana-zk-token-sdk = { version = "=1.17.0" }
spl-token = { version = "=4.0" }
tokio = { version = "=1.37", features = ["full"] }
serde = { version = "=1.0", features = ["derive"] }
serde_json = { version = "=1.0" }
bincode = { version = "=1.3" }
aes-gcm = { version = "=0.10" }
ring = { version = "=0.17" }
zeroize = { version = "=1.3" }
thiserror = { version = "=1.0" }
anyhow = { version = "=1.0" }
tracing = { version = "=0.1" }
tracing-subscriber = { version = "=0.3" }
clap = { version = "=4.5", features = ["derive", "env"] }
reqwest = { version = "=0.12", features = ["json"] }
tokio-tungstenite = { version = "=0.21" }
futures = { version = "=0.3" }
async-trait = { version = "=0.1" }
once_cell = { version = "=1.19" }
hex = { version = "=0.4" }
base64 = { version = "=0.21" }
chrono = { version = "=0.4", features = ["serde"] }
uuid = { version = "=1.7", features = ["v4", "serde"] }
prometheus = { version = "=0.13" }
rand = { version = "=0.8" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = 'abort'
incremental = false

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = false
