[workspace]
members = [
    "core",
    "agent",
    "dapp",
    "cli",
]
resolver = "2"

[workspace.dependencies]
solana-sdk = { version = "*", features = ["full"] }
solana-client = { version = "*" }
solana-program = { version = "*" }
solana-program-test = { version = "*" }
solana-zk-token-sdk = { version = "*" }
spl-token = { version = "*" }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
bincode = { version = "*" }
aes-gcm = { version = "*" }
ring = { version = "*" }
zeroize = { version = "*" }
thiserror = { version = "*" }
anyhow = { version = "*" }
tracing = { version = "*" }
tracing-subscriber = { version = "*" }
clap = { version = "*", features = ["derive", "env"] }
reqwest = { version = "*", features = ["json"] }
tokio-tungstenite = { version = "*" }
futures = { version = "*" }
async-trait = { version = "*" }
once_cell = { version = "*" }
hex = { version = "*" }
base64 = { version = "*" }
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["v4", "serde"] }
prometheus = { version = "*" }
rand = { version = "*" }
subtle = { version = "*" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = 'abort'
incremental = false

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = false
