[package]
name = "agent-wallet-core"
version = "0.1.0"
edition = "2021"
description = "Core wallet library for AI agents on Solana"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/yourusername/agent-wallet"
keywords = ["solana", "wallet", "agent", "ai", "blockchain"]
categories = ["cryptography", "web3", "blockchain"]
authors = ["AI Agent Wallet Contributors"]

[features]
default = ["encryption-aes"]
encryption-aes = ["dep:aes-gcm"]
encryption-ring = ["dep:ring", "dep:zeroize"]
metrics = ["prometheus"]
full = ["encryption-aes", "encryption-ring", "tracing", "metrics"]

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
aes-gcm = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, optional = true }
hex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
once_cell = { workspace = true }
dirs = "*"
pbkdf2 = "*"
sha2 = "*"
serde_yaml = "*"
bs58 = "*"
spl-token = { workspace = true }
spl-token-2022 = "*"
spl-token-metadata-interface = "*"
spl-associated-token-account = "*"
spl-memo = { version = "*" }

[dev-dependencies]
solana-program-test = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tempfile = "3.10"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
